--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "bcrypt": "^5.0.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "express-ejs-layouts": "^2.5.0",
     "express-flash": "0.0.2",
     "express-session": "^1.17.1",
+    "firebase": "^7.15.5",
+    "firebase-admin": "^8.13.0",
+    "install": "^0.13.0",
     "method-override": "^3.0.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
